style.css
h1,
h2,
h3,
p,
button,
textarea,
span,
ul,
label,
footer,
html {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  margin: 0px;
  padding: 0px;
  line-height: 1.5;
  font-size: 18px;
}

html {
  color: #262626;
}

body {
  background-color: #f6f7fb;
}

body > * > * + * {
  margin-top: 1em;
  /* border: 1px solid orangered; */
}

/* Small & medium screens */
@media screen and (max-width: 654px) {
  .parent--container {
    /*   display: grid;
    gap: 16px 0px;
    grid-template-columns: 8px 0px 1fr 1fr 96px 0px 8px;
	grid-template-rows: 1em auto auto 46px auto; */

    display: grid;
    max-width: 24em;

    padding: 16px;
    width: auto;
    margin: 1.5rem auto;
  }

  .numberCount {
    font-size: 48px;
    justify-content: left;
  }

  .textAreaBox {
    height: 200px !important;
  }

  .copyText {
    display: none;
  }
}

/* Big screens */
@media screen and (min-width: 655px) {
  .parent--container {
    display: grid;
    max-width: 40em;

    width: auto;
    margin: 2rem auto;
  }

  .characterCountLabel {
    font-size: 36px;
  }

  .numberCount {
    font-size: 48px;
    justify-content: left;
  }

  .pageDescription {
    width: 60%;
  }
}

.mainTitle {
  font-size: 36px;
}

.results__section--layout {
  display: flex;
  align-items: center;
  justify-content: left;
}

.results__section--layout > * {
  margin-right: 48px;
}

.numberCount {
  font-variant-numeric: tabular-nums;

  font-weight: 600;

  align-content: center;

  color: #2445c6;
}

.textBoxLabel {
  font-weight: 500;

  font-size: 16px;
  padding: 8px 24px 8px 24px;
  border-radius: 6px 6px 0px 0px;
  background-color: #e5e5e5;
  border: 1px #e5e5e5 solid;
  line-height: 1.6;
  margin: 0px;
}

textarea::placeholder {
  color: #474c66;
  font-weight: 400;
}

/* Styling for the text area itself */
.textAreaBox {
  width: 100%;
  resize: vertical;
  height: auto;

  padding: 24px;

  background: #ffffff;
  border: 2px solid #e5e5e5;
  box-sizing: border-box;
  box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.15);

  border-radius: 8;
}

.button--style {
  /* Text styling */

  line-height: 1.6;
  text-align: center;
  font-weight: 500;
  color: #ffffff;

  /* Button styling */
  background: linear-gradient(180deg, #0eb16d 0%, #098b55 100%);
  border: 2px solid #098b55;
  border-radius: 4px;

  margin: 1rem 0px;
  padding: 8px 32px;
}

.button--destructive {
  background: #f6f7fb;
  font-weight: 500;
  color: #da093d;
  border: 2px solid #da093d;
}

.clear-history--layout {
  display: flex;

  margin-left: auto;
}

a:link,
a:active,
a:hover,
a:visited {
  text-decoration: none;
  color: #2445c6;
  border-bottom: 2px #2445c6 solid;
}

@media (prefers-color-scheme: dark) {
  body {
    background-color: #03051a;
    color: #f6f7fb;
  }

  .textAreaBox {
    /* background: #03051a; */
    /* color: #ffffff; */
    border: 4px solid #9ca5c7;
  }

  label {
    color: #333;
  }

  a:any-link {
    color: #f6f7fb !important;
  }

  .numberCount {
    color: hsl(228, 69%, 72%);
  }

  .button--destructive {
    background-color: #1a0208;
    color: #ffffff;
    border: 3px solid #960429;
  }
}

